--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -5,10 +5,10 @@
     <h2>Ferramenta para Detectar Patologias na Voz</h2>
     <p>Clique em um dos botões para ser direcionado à página desejada:</p>
     <div class="button-list">
-        <button onclick="location.href='/page1'">Pag 1 - Carregar áudio</button>
-        <button onclick="location.href='/page2'">Pag 2 - Gravar áudio</button>
-        <button onclick="location.href='/page3'">Pag 3 - Ver resultados DB</button>
-        <button onclick="location.href='/page4'">Pag 4 - Tutorial</button>
+        <button onclick="location.href='/page1'">Carregar áudio</button>
+        <button onclick="location.href='/page2'">Gravar áudio</button>
+        <button onclick="location.href='/page3'">Resultados DB</button>
+        <button onclick="location.href='/page4'">Tutorial</button>
     </div>
 </div>
 <style>
