Adiciona tabelas na apresentação dos resultados
Falta terminar adaptação da parte das frequencias da fft, por enquanto está apresentando valores default -  objetivo ler 2 listas do resultado e criar um dicionariio com freq e amp para alimentar tabela

--- a/frontend/templates/page1.html
+++ b/frontend/templates/page1.html
@@ -16,6 +16,12 @@
 
 <div id="result">Aguarde enquanto processamos o arquivo...</div>
 <div id="waveform" style="margin-top: 20px;"></div>
+
+<meta charset="UTF-8">
+<!-- Contêiner onde a tabela será inserida -->
+<div id="tabela-resultados"></div>
+<div id="tabela-resultados_fft"></div>
+
 <div class="audio-controls">
     <button id="playRegionButton" disabled>Ouvir Áudio</button>
     <button id="cutButton" disabled>Cortar Áudio</button>
