--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -94,3 +94,19 @@ form {
         width: 100%;
         margin: auto;
     }
+
+table {
+        width: 50%;
+        margin: 20px auto;
+        border-collapse: collapse;
+        text-align: center;
+      }
+th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+       }
+
+th {
+       background-color: #f4f4f4;
+       font-weight: bold;
+   }
